# PhotonCamera

./: .gitignore  AGENTS.md  GEMINI.md
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: face_det_lite.tflite  films.json
app/src/main/assets/agx/: AgX_Base_sRGB.plut
app/src/main/cpp/: CMakeLists.txt  dcp_parser.cpp  lut_processor.cpp  native-lib.cpp  stacking_utils.cpp  stacking_utils.h  vulkan_raw_stacker.cpp  vulkan_raw_stacker.h  vulkan_stacker.cpp  vulkan_stacker.h
app/src/main/cpp/dcp/XMPStub/include/: XMPStub.hpp
app/src/main/cpp/dcp/dng_sdk/source/: dng_1d_table.cpp  dng_1d_table.h  dng_area_task.cpp  dng_bad_pixels.cpp  dng_big_table.cpp  dng_big_table.h  dng_bmff.cpp  dng_camera_profile.cpp  dng_date_time.cpp  dng_exceptions.cpp  dng_exceptions.h  dng_file_stream.cpp  dng_fingerprint.cpp  dng_fingerprint.h  dng_flags.h  dng_gain_map.cpp  dng_gain_map.h  dng_hue_sat_map.cpp  dng_ifd.cpp  dng_ifd.h  dng_image.cpp  dng_image_writer.cpp  dng_image_writer.h  dng_info.cpp  dng_jpeg_image.cpp  dng_jxl.cpp  dng_jxl.h  dng_jxl_disabled.cpp  dng_lens_correction.cpp  dng_linearization_info.cpp  dng_local_string.cpp  dng_lossless_jpeg_shared.cpp  dng_memory_stream.cpp  dng_memory_stream.h  dng_misc_opcodes.cpp  dng_mosaic_info.cpp  dng_negative.cpp  dng_negative.h  dng_opcode_list.cpp  dng_parse_utils.cpp  (+32 more)
app/src/main/cpp/shaders/: accumulate.comp  align_lk.comp  color_gather_raw.comp  color_scatter_raw.comp  green_gather_raw.comp  green_scatter_raw.comp  normalize.comp  normalize_color_hr.comp  normalize_green_hr.comp  reference_prior_raw.comp  robustness_raw.comp  robustness_summary.comp  structure_tensor.comp
app/src/main/res/values/: colors.xml  (+3 more)
docs/: gles-driver-compatibility.md  image-stack-alignator-gles-raw-stacker-rearchitecture.md  pgtm-debug-handoff-20260702.md  raw-stack-mfnr-mfsr-implementation-plan.md
gradle/: libs.versions.toml
scripts/: analyze_google_pgtm.py  compare_embedded_pgtm.py  convert_luts.py  extract_pgtm_regression_fixture.py  fetch_films.py  films_data.json  generate_spektrafilm_print_model.py  import_material_icons.py  pyproject.toml  rewrite_material_icon_references.py  transpose_png_luts.py
(+359 files in other folders)
